--- a/src/main/resources/templates/cell/form.html
+++ b/src/main/resources/templates/cell/form.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Nueva Celda</title>
+  <title>Celda</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-4">
-<h2>Registrar Nueva Celda</h2>
+<h2>Celda</h2>
 
 <form th:action="@{/celdas/guardar}" th:object="${cell}" method="post">
+  <input type="hidden" th:field="*{id}" />
+
   <div class="mb-3">
     <label class="form-label">Código</label>
     <input type="text" th:field="*{code}" class="form-control" required>
   </div>
+
+  <div class="mb-3">
+    <label class="form-label">Tipo de Celda</label>
+    <select th:field="*{type}" class="form-control" required>
+      <option value="" disabled selected>Seleccione el tipo</option>
+      <option value="Carro">Carro</option>
+      <option value="Moto">Moto</option>
+      <option value="Bicicleta">Bicicleta</option>
+    </select>
+  </div>
+
   <button type="submit" class="btn btn-success">Guardar</button>
   <a href="/celdas" class="btn btn-secondary">Cancelar</a>
 </form>
+
 </body>
 </html>
