se realizan funcionalidades basicas de pago

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -33,6 +33,8 @@
 <a href="/vehicle/salida" class="btn btn-danger">Registrar Salida</a>
 <a href="/celdas" class="btn btn-info">Ver Celdas</a>
 <a href="/celdas/nueva" class="btn btn-success">Agregar Celda</a>
+<a href="/pagos" class="btn btn-secondary">Realizar Pago</a>
+
 
 </body>
 </html>
